// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverviewSidebar clicks on workspace items change the query correctly 1`] = `

<gui-grid-header>
  Workspaces
</gui-grid-header>
<div class="flex flex-col gap-4">
  <div class="group relative">
    <div
      style="--column-gap-y: 1rem; --column-gap-x: 1rem;"
      class="pointer-events-none absolute w-[var(--column-gap-x)] h-[calc(100%+var(--column-gap-y))] -top-[calc(100%-1.25px-var(--column-gap-y)/5)] -left-[calc(var(--column-gap-x)/2)] border-l-[1px] border-b-[1px] rounded-bl-md border-muted group-[&amp;:first-of-type]:rounded-none group-[&amp;:first-of-type]:h-[1px] group-[&amp;:first-of-type]:w-[var(--column-gap-x)] group-[&amp;:first-of-type]:-left-4 group-[&amp;:first-of-type]:border-l-[0px] group-[&amp;:first-of-type]:inset-y-0 group-[&amp;:first-of-type]:my-auto group-[&amp;:nth-child(n+3)]:h-[calc(100%+(var(--column-gap-y)*2))] group-[&amp;:nth-child(n+3)]:-top-[calc(100%+var(--column-gap-y)/1.5)] group-has-[.parent]:left-[calc(100%)] group-has-[.parent]:border-l-[0px] group-has-[.parent]:w-[var(--column-gap-x)] group-has-[.parent]:h-[1px] group-has-[.parent]:top-[50%] group-has-[.parent]:rounded-none hidden"
    >
    </div>
    <span data-state="closed">
      <div
        class="block rounded-lg border bg-card text-card-foreground shadow-sm group relative z-[10] cursor-default transition-all"
        role="article"
      >
        <div class="p-6 relative flex w-full max-w-full flex-row items-baseline gap-3 px-3 py-2">
          <button
            data-state="closed"
            class="w-full max-w-full cursor-default items-baseline justify-between overflow-hidden truncate text-left text-sm font-medium"
          >
            workspace-item
          </button>
          <span class="ml-auto font-courier text-sm font-normal text-muted-foreground">
            v1.0.0
          </span>
          <div class="absolute -bottom-3 right-2.5">
            <div class="inline-flex items-center px-2.5 py-0.5 text-xs transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-gray-500/25 border-[1px] border-gray-600 dark:border-gray-400 hover:bg-gray-400/40 dark:bg-gray-500/30 dark:text-gray-400 dark:hover:bg-gray-500/40 h-[18px] rounded-full text-xxs font-normal backdrop-blur-md">
              workspace
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>

`;

exports[`OverviewSidebar contains SuggestedQueries when dependencies are present 1`] = `

<gui-suggested-queries>
</gui-suggested-queries>

`;

exports[`OverviewSidebar renders with a parent 1`] = `

<gui-grid-header>
  Parent
</gui-grid-header>
<gui-side-item
  parent="false"
  item="[object Object]"
  highlight="false"
>
</gui-side-item>

`;

exports[`OverviewSidebar renders with a parent and workspaces 1`] = `

<gui-grid-header>
  Parent
</gui-grid-header>
<gui-side-item
  parent="false"
  item="[object Object]"
  highlight="false"
>
</gui-side-item>
<gui-grid-header>
  Workspaces
</gui-grid-header>
<div class="flex flex-col gap-4">
  <gui-side-item
    item="[object Object]"
    isworkspace="false"
    dependencies="false"
  >
  </gui-side-item>
  <gui-side-item
    item="[object Object]"
    isworkspace="false"
    dependencies="false"
  >
  </gui-side-item>
</div>

`;

exports[`OverviewSidebar renders with a parent, workspaces, and dependents 1`] = `

<gui-grid-header>
  Parent
</gui-grid-header>
<gui-side-item
  parent="false"
  item="[object Object]"
  highlight="false"
>
</gui-side-item>
<gui-grid-header>
  Workspaces
</gui-grid-header>
<div class="flex flex-col gap-4">
  <gui-side-item
    item="[object Object]"
    isworkspace="false"
    dependencies="false"
  >
  </gui-side-item>
  <gui-side-item
    item="[object Object]"
    isworkspace="false"
    dependencies="false"
  >
  </gui-side-item>
</div>
<gui-grid-header>
  Dependents
</gui-grid-header>
<div class="flex flex-col gap-4">
  <gui-side-item
    item="[object Object]"
    isworkspace="false"
    dependencies="false"
  >
  </gui-side-item>
  <gui-side-item
    item="[object Object]"
    isworkspace="false"
    dependencies="false"
  >
  </gui-side-item>
</div>

`;
